# dev-journal

./: .gitignore  README.md  pyproject.toml
dev_journal/: __init__.py  analyzer.py  cli.py  config.py  parser.py  summarizer.py
tests/: test_cli.py
